@@ -1,7 +1,7 @@
 ----------------------------------------------------------------------
  OmegaT 3.1.1
 ----------------------------------------------------------------------
-   7 Enhancements
+   8 Enhancements
    3 Bug fixes
    3 Localisation updates
 ----------------------------------------------------------------------
@@ -20,6 +20,9 @@
 
   - PO filter: allow translating blank source segments
   https://sourceforge.net/p/omegat/feature-requests/960/
+
+  - Allow Moving up/down/first/last multiple files in Project Files list
+  https://sourceforge.net/p/omegat/feature-requests/964/
 
   Other enhancements:
 
